整合自定义控件，修复控件宽高计算错误
sqz

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">NiceViewDemo</string>
+
+    <string name="nice_pointer" translatable="false">Nice Pointer</string>
+    <string name="nice_picker" translatable="false">Nice Picker</string>
+
 </resources>
