--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="nice_pointer" translatable="false">Nice Pointer</string>
     <string name="nice_picker" translatable="false">Nice Picker</string>
+    <string name="nice_circle_ripple" translatable="false">Nice circleRipple</string>
 
 </resources>
