--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="nice_pointer" translatable="false">Nice Pointer</string>
     <string name="nice_picker" translatable="false">Nice Picker</string>
     <string name="nice_circle_ripple" translatable="false">Nice circleRipple</string>
+    <string name="nice_bubble_layout" translatable="false">Nice BubbleLayout</string>
+
+    <string name="change" translatable="false">change</string>
+
 
 </resources>
