--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
-    <string name="app_name">NiceViewDemo</string>
+    <string name="app_name">NiceViewSamples</string>
 
     <string name="nice_pointer" translatable="false">Nice Pointer</string>
     <string name="nice_picker" translatable="false">Nice Picker</string>
     <string name="nice_circle_ripple" translatable="false">Nice circleRipple</string>
     <string name="nice_bubble_layout" translatable="false">Nice BubbleLayout</string>
     <string name="nice_radio_button" translatable="false">Nice RadioButton</string>
+    <string name="nice_camera" translatable="false">Nice Camera</string>
 
     <string name="change" translatable="false">change</string>
 
